--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "vue-router": "4.0.3"
   },
   "devDependencies": {
+    "@types/d3-scale": "^3.2.2",
     "@vitejs/plugin-vue": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.5",
     "@vuedx/typecheck": "^0.6.0",
