Added enpoints login and register

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source=lovepizza.db"
+  },
+  "TokenKey": "super secret key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
