--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "d3-scale": "^3.2.3",
     "vue": "^3.0.5",
