--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "d3-scale": "^3.2.3",
     "vue": "^3.0.5",
     "vue-chartjs": "^3.5.1",
-    "vue-router": "4.0.3"
+    "vue-router": "4.0.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@types/d3-scale": "^3.2.2",
