--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "vue": "^3.0.5",
     "vue-chartjs": "^3.5.1",
     "vue-router": "4.0.3",
-    "vuex": "^3.6.2"
+    "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
     "@types/d3-scale": "^3.2.2",
