--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@meforma/vue-toaster": "^1.2.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "d3-scale": "^3.2.3",
+    "stylus": "^0.54.8",
+    "stylus-loader": "3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
